Added html buttons

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,12 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+    <h1>Projects</h1>
+    <button id="button1" data-project="1" type="button">Simpele test</button>
+    <button id="button2" data-project="2" type="button">Phidget A</button>
+    <button id="button3" data-project="3" type="button">Phidget B</button>
+    <button id="button4" data-project="4" type="button">Phidget C</button>
+    <button id="button5" data-project="5" type="button">Alle Phidgets</button>
 
     <script src="./renderer.js"></script>
   </body>
