No idea anymore

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Projects</h1>
-    <button id="button1" data-project="1" type="button">Simpele test</button>
+    <button id="button1" data-project="1" type="button" onfocusout="deactivateLights()">Simpele test</button>
     <button id="button2" data-project="2" type="button">Phidget A</button>
     <button id="button3" data-project="3" type="button">Phidget B</button>
     <button id="button4" data-project="4" type="button">Phidget C</button>
